--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </header>
     <!--Seccion principal-->
     <main>
-        <!--Pgina principal-->
+        <!--Pgina principal section-->
         <section class="paginaPrincipal">
             <div class="fondo__transparente">
             <div class="contenedor">
