--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="../imagen/DSC_2869.jpg" class="d-block w-100" alt="...">
+                        <img src="imagen/DSC_2869.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5 class="bg-dark">-Puerto Madero SLS</h5>
                           <p class="bg-light">Dentro de los clásicos docks de Puerto Madero se proyecta un espacio interior particular generado como una gran vidriera interna donde el cliente expondrá sus exclusivos productos, los cuales pueden ser admirados desde un espacio totalmente diferente y en contraste con el mismo..</p>
                         </div>
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        <img src="../imagen/MAI2863_1.jpg" class="d-block w-100" alt="...">
+                        <img src="imagen/MAI2863_1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5 class="bg-dark">-Pilar</h5>
                           <p class="bg-light">En la búsqueda de un cambio de vida surge como deseo del cliente una vivienda moderna y funcional en plena relación con el entorno.
@@ -131,7 +131,7 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="../imagen/MODO-CASA-SLS-PUERTO-MADERO-PH_FEDERICO_KULEKDJIAN-19-1.jpg" class="d-block w-100" alt="...">
+                        <img src="imagen/MODO-CASA-SLS-PUERTO-MADERO-PH_FEDERICO_KULEKDJIAN-19-1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5 class="bg-dark">-PH WASHINGTON</h5>
                           <p class="bg-light">Basados en la necesidad del cliente y la coyuntura pandémica surge un proyecto integral de renovación y actualización de la vivienda.
@@ -215,7 +215,7 @@
                     <div class="row">
                       <div class="col">
                         <div class="card">
-                            <img src="../imagen/1.jpg" class="card-img-top" alt="...">
+                            <img src="imagen/1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">BIENVENIDO A ARQUIC</h5>
                               <p class="card-text">El primer paso es conocer tus gustos, ideas iniciales, requerimientos de tu estilo de vida y plazos para la ejecucion del proyecto</p>
@@ -224,7 +224,7 @@
                       </div>
                       <div class="col">
                         <div class="card">
-                            <img src="../imagen/2.jpg" class="card-img-top" alt="...">
+                            <img src="imagen/2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">DESARROLLO DE DISEÑO</h5>
                               <p class="card-text">Nuestro equipo desarrollara una primera propuesta, <br> considerando las definiciones previas.</p>
@@ -233,7 +233,7 @@
                       </div>
                       <div class="col">
                         <div class="card">
-                            <img src="../imagen/3.jpg" class="card-img-top" alt="...">
+                            <img src="imagen/3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">DESPACHO E INSTALACION</h5>
                               <p class="card-text">Una vez que lleguen los productos, <br> realizaremos una visita de preinstalacion y <br> si esta todo listo en obra, <br> procederemos a coordinar el despacho e instalacion.</p>
