--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-            <div class="container text-">
+            <div class="container text">
               <a class="navbar-brand text-white" href="./index.html">Arquic</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -117,7 +117,7 @@
                         <p>Dentro de los clásicos docks de Puerto Madero se proyecta un espacio interior particular generado como una gran vidriera interna <br>donde el cliente expondrá sus exclusivos productos, <br> los cuales pueden ser admirados desde un espacio totalmente diferente y en contraste con el mismo..</p>
                         </div>
                     </div>
-                    <div class="palermo">
+                    <div class="madero">
                         <img src="imagen/MAI2863_1.jpg" alt="">
                         <div class="card">
                         <h4>-Pilar</h4>
@@ -126,7 +126,7 @@
                         Permitiendo sentir la naturaleza desde el confort del hogar..</p>
                         </div>
                     </div>
-                    <div class="palermo">
+                    <div class="madero">
                         <img src="imagen/MODO-CASA-ALVEAR-TOWER-PISO-12-PH-FEDERICO-KULEKDJIAN-24-1.jpg" alt="">
                         <div class="card">
                         <h4>-PH WASHINGTON</h4>
